4187
the error message changed after r21973 (fix for SI-3189). currently, the parser does not allow

{code}
scala> val List(_*) = List(0)
<console>:1: error: illegal start of simple pattern
       val List(_*) = List(0)
                  ^
{code}

paul, is this expected? if yes we can probably close this bug.
